ansible/roles/gcloud/v2/gke_cluster_addons/files/manifests/istio-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # should it be like this?
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "boutique.ziemian.top"
      tls:
        mode: SIMPLE
        credentialName: ingress-cert
        privateKey: sds
        serverCertificate: sds
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-ingress-vs
  namespace: istio-ingress
spec:
  hosts:
    - "boutique.ziemian.top"
  gateways:
    - istio-ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend.boutique.svc.cluster.local
            port:
              number: 80
